--- a/style.css
+++ b/style.css
@@ -1861,8 +1861,15 @@ flex-direction: column;
     background-color: #f2f2f2;
     height:40px;
     border-radius: 24px;
-    position: absolute;
-    bottom: 120px;
+    /* position: absolute;
+    bottom: 120px; */
+    margin-bottom: 30px;
+}
+.hiddenarrow
+{
+    height:15px;
+    margin-left: 10px;
+    
 }
 
 #v2
@@ -2592,7 +2599,7 @@ right:70px;
 }
  .pic6{
       display: flex;
-    height:10px;
+    height:12px;
     position:absolute;
     top:66px;
     right:40px;
@@ -2608,7 +2615,7 @@ right:70px;
 {
     display: flex;
     height:15px;
-    margin-left: 110px;
+    margin-left: 100px;
 
 }
 .endhidden{
